--- a/demo/WpfApplication1/WpfApplication2/App.xaml
+++ b/demo/WpfApplication1/WpfApplication2/App.xaml
@@ -1,11 +1,15 @@
 ﻿<Application x:Class="WpfApplication2.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Page_DenpendencyProperty.xaml">
+             xmlns:local="clr-namespace:WpfApplication2"
+             StartupUri="Page_RoutedEvent_1.xaml">
     <Application.Resources>
         <SolidColorBrush x:Key="MyBrush" Color="Gold"/>
+        <!--样式资源-->
         <Style x:Key="styleGreenButton">
             <Setter Property="Control.Background" Value="Green"/>
         </Style>
+        <!--引入.NET对象资源-->
+        <local:BindingData x:Key="myDataSource"/>
     </Application.Resources>
 </Application>
