--- a/demo/WpfApplication1/WpfApplication2/App.xaml
+++ b/demo/WpfApplication1/WpfApplication2/App.xaml
@@ -1,8 +1,9 @@
 ﻿<Application x:Class="WpfApplication2.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WpfApplication2"
-             StartupUri="Page_RoutedEvent_1.xaml">
+             xmlns:local="clr-namespace:WpfApplication2" 
+             Startup="Application_Startup" Activated="Application_Activated" Deactivated="Application_Deactivated" DispatcherUnhandledException="Application_DispatcherUnhandledException" SessionEnding="Application_SessionEnding"
+             >
     <Application.Resources>
         <SolidColorBrush x:Key="MyBrush" Color="Gold"/>
         <!--样式资源-->
