--- a/AgvSchedule/AgvSchedule.Test/UserCtlStoryboardByCode.xaml
+++ b/AgvSchedule/AgvSchedule.Test/UserCtlStoryboardByCode.xaml
@@ -6,6 +6,13 @@
              xmlns:local="clr-namespace:AgvSchedule.Test"
              mc:Ignorable="d" d:DesignHeight="450" d:DesignWidth="600"
              Background="Transparent">
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Styles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </UserControl.Resources>
     <Grid ShowGridLines="True" x:Name="grid">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
