--- a/AgvSchedule/AgvSchedule/MainWindow.xaml
+++ b/AgvSchedule/AgvSchedule/MainWindow.xaml
@@ -5,8 +5,19 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AgvSchedule"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="800" Width="900">
     <Grid>
-
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="150"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="50"/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        <StackPanel Background="LightGray" Grid.Row="0" Grid.Column="0" Grid.RowSpan="2">
+            
+        </StackPanel>
+        <local:CtlWorkBench Grid.Row="1" Grid.Column="1" Margin="2"/>
     </Grid>
 </Window>
